internal/xds/translator/testdata/out/xds-ir/grpc-timeout.routes.yaml
- ignorePortInHostMatching: true
  name: grpc-listener
  virtualHosts:
  - domains:
    - '*'
    name: grpc-listener/*
    routes:
    - match:
        prefix: /
      name: grpc-route-with-grpc-timeout-header-max
      route:
        cluster: grpc-route-with-grpc-timeout-header-max-dest
        maxStreamDuration:
          grpcTimeoutHeaderMax: 30s
    - match:
        prefix: /
      name: grpc-route-with-both-timeouts
      route:
        cluster: grpc-route-with-both-timeouts-dest
        idleTimeout: 3600s
        maxStreamDuration:
          grpcTimeoutHeaderMax: 30s
          maxStreamDuration: 60s
        timeout: 60s
    - match:
        prefix: /
      name: grpc-route-with-zero-grpc-timeout
      route:
        cluster: grpc-route-with-zero-grpc-timeout-dest
        maxStreamDuration:
          grpcTimeoutHeaderMax: 0s
    - match:
        prefix: /
      name: grpc-route-with-only-stream-timeout
      route:
        cluster: grpc-route-with-only-stream-timeout-dest
        idleTimeout: 3600s
        maxStreamDuration:
          maxStreamDuration: 45s
        timeout: 45s
    - match:
        prefix: /
      name: http-route-with-grpc-timeout
      route:
        cluster: http-route-with-grpc-timeout-dest
        upgradeConfigs:
        - upgradeType: websocket
